--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ back/package-lock.json
 backend/.env
 backend/node_modules
 backend/package-lock.json
+*.cc
+linux/flutter/generated_plugins.cmake
+macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
