--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: resources
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -16,6 +16,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   flutter_lints: ^5.0.0
 
 flutter:
@@ -23,6 +25,7 @@ flutter:
   assets:
     - assets/fonts/
     - assets/icons/
+    - assets/icons/logo.png
   fonts:
     - family: Chillax
       fonts:
