--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Installer Flutter
+      # 2️⃣ Installer Flutter compatible Dart 3.7.2+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # adapte selon ta version
+          flutter-version: '3.35.4'
 
       # 3️⃣ Build Flutter Web
       - name: Build Flutter Web
